syntax = "proto3";

option go_package = "grpc/users";

service Users {
    rpc AddUser (NewUserRequest) returns (UserResponse);
    rpc Login (LoginRequest) returns (TokenResponse);
    rpc Refresh (RefreshRequest) returns (TokenResponse);
}

message NewUserRequest {
    string Username = 1;
    string Password = 2;
    string Role = 3;
    string AccessToken = 4;
}

message LoginRequest {
    string Username = 1;
    string Password = 2;
}

message RefreshRequest {
    string RefreshToken = 1;
}

message TokenResponse {
    string AccessToken = 1;
    string RefreshToken = 2;
}

message UserResponse {
    message RoleResponse {
        string Id = 1;
        string RoleLabel = 2;
        string RoleSlug = 3;
    }

    string Id = 1;
    string FirstName = 2;
    string LastName = 3;
    RoleResponse Role = 4;
}